Додана анімація декоративних ефектів

--- a/portfolio.html
+++ b/portfolio.html
@@ -79,7 +79,15 @@
                 <ul class="projects list">
                     <li class="item">
                         <a href="" class="link">
-                            <img src="./images/tehnokryak.jpg" alt="Фото сайта, на котором размещены фотографии трех людей" class="img">
+                            <div class="project-wrap">
+                                <div class="project-overlay">
+                                    <p class="project-overlay-description">
+                                        Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит 
+                                        посетителю получить исчерпывающие сведения о компании или частном лице.
+                                    </p>
+                                </div>
+                                <img src="./images/tehnokryak.jpg" alt="Фото сайта, на котором размещены фотографии трех людей" class="img">
+                            </div>
                             <div class="project-description">
                                 <H2 class="title">Технокряк</H2>
                                 <p class="project">Веб-сайт</p>
@@ -88,7 +96,15 @@
                     </li>
                     <li class="item">
                         <a href="" class="link">
-                            <img src="./images/new-orlean-vs-golden-star.jpg" alt="Рисунок двух баскетболистов с мячом" class="img">
+                            <div class="project-wrap">
+                                <img src="./images/new-orlean-vs-golden-star.jpg" alt="Рисунок двух баскетболистов с мячом" class="img">
+                                <div class="project-overlay">
+                                    <p class="project-overlay-description">
+                                        Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит 
+                                        посетителю получить исчерпывающие сведения о компании или частном лице.
+                                    </p>
+                                </div>
+                            </div>
                             <div class="project-description">
                                 <H2 class="title">Постер New Orlean vs Golden Star</H2>
                                 <p class="project">Дизайн</p>
@@ -97,7 +113,15 @@
                     </li>
                     <li class="item">
                         <a href="" class="link">
-                            <img src="./images/seafood.jpg" alt="Логотип ресторана морепродуктов" class="img">
+                            <div class="project-wrap">
+                                <img src="./images/seafood.jpg" alt="Логотип ресторана морепродуктов" class="img">
+                                <div class="project-overlay">
+                                    <p class="project-overlay-description">
+                                        Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит 
+                                        посетителю получить исчерпывающие сведения о компании или частном лице.
+                                    </p>
+                                </div>
+                            </div>
                             <div class="project-description">
                                 <H2 class="title">Постер New Orlean vs Golden Star</H2>
                                 <p class="project">Приложение</p>
@@ -106,7 +130,15 @@
                     </li>
                     <li class="item">
                         <a href="" class="link">
-                            <img src="./images/prime.jpg" alt="Наушники" class="img">
+                            <div class="project-wrap">
+                                <img src="./images/prime.jpg" alt="Наушники" class="img">
+                                <div class="project-overlay">
+                                    <p class="project-overlay-description">
+                                        Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит 
+                                        посетителю получить исчерпывающие сведения о компании или частном лице.
+                                    </p>
+                                </div>
+                            </div>
                             <div class="project-description">
                                 <H2 class="title">Проект Prime</H2>
                                 <p class="project">Маркетинг</p>
@@ -115,7 +147,15 @@
                     </li>
                     <li class="item">
                         <a href="" class="link">
-                            <img src="./images/boxes.jpg" alt="Две симпатичные коробки" class="img">
+                            <div class="project-wrap">
+                                <img src="./images/boxes.jpg" alt="Две симпатичные коробки" class="img">
+                                <div class="project-overlay">
+                                    <p class="project-overlay-description">
+                                        Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю 
+                                        получить исчерпывающие сведения о компании или частном лице.
+                                    </p>
+                                </div>
+                            </div>
                             <div class="project-description">
                                 <H2 class="title">Проект Boxes</H2>
                                 <p class="project">Приложение</p>
@@ -124,8 +164,16 @@
                     </li>
                     <li class="item">
                         <a href="" class="link">
-                            <img src="./images/inspiration.jpg" alt="Монитор компьютера" class="img">
-                           <div class="project-description">
+                            <div class="project-wrap">
+                                <img src="./images/inspiration.jpg" alt="Монитор компьютера" class="img">
+                                <div class="project-overlay">
+                                    <p class="project-overlay-description">
+                                        Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю 
+                                        получить исчерпывающие сведения о компании или частном лице.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="project-description">
                                 <H2 class="title">Inspiration has no Borders</H2>
                                 <p class="project">Веб-сайт</p>
                            </div>
@@ -133,7 +181,15 @@
                     </li>
                     <li class="item">
                         <a href="" class="link">
-                            <img src="./images/limited-edition.jpg" alt="Открытый журнал" class="img">
+                            <div class="project-wrap">
+                                <img src="./images/limited-edition.jpg" alt="Открытый журнал" class="img">
+                                <div class="project-overlay">
+                                    <p class="project-overlay-description">
+                                        Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
+                                        получить исчерпывающие сведения о компании или частном лице.
+                                    </p>
+                                </div>
+                            </div>
                             <div class="project-description">
                                 <H2 class="title">Издание Limited Edition</H2>
                                 <p class="project">Дизайн</p>
@@ -142,7 +198,15 @@
                     </li>
                     <li class="item">
                         <a href="" class="link">
-                            <img src="./images/lab.jpg" alt="Бирка">
+                            <div class="project-wrap">
+                                <img src="./images/lab.jpg" alt="Бирка">
+                                <div class="project-overlay">
+                                    <p class="project-overlay-description">
+                                        Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
+                                        получить исчерпывающие сведения о компании или частном лице.
+                                    </p>
+                                </div>
+                            </div>
                             <div class="project-description">
                                 <H2 class="title">Проект LAB</H2>
                                 <p class="project">Маркетинг</p>
@@ -151,7 +215,15 @@
                     </li>
                     <li class="item">
                         <a href="" class="link">
-                            <img src="./images/growing-business.jpg" alt="Работающий ноутбук и руки человека, который на нем работает">
+                            <div class="project-wrap">
+                                <img src="./images/growing-business.jpg" alt="Работающий ноутбук и руки человека, который на нем работает">
+                                <div class="project-overlay">
+                                    <p class="project-overlay-description">
+                                        Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
+                                        получить исчерпывающие сведения о компании или частном лице.
+                                    </p>
+                                </div>
+                            </div>
                             <div class="project-description">
                                 <H2 class="title">Growing Business</H2>
                                 <p class="project">Приложение</p>
